<resources>
    <string name="app_name">Eligasht</string>
    <string name="accept">accept</string>
    <string name="icon_menu">&#68;</string>
    <string name="icon_bed">&#69;</string>
    <string name="icon_location">&#xe90b;</string>
    <string name="icon_location2">&#xe90b;</string>
    <string name="icon_info">&#xe906;</string>
    <string name="icon_pin">&#xe907;</string>
    <string name="icon_filter">&#112;</string>
    <string name="icon_sort">&#xf160;</string>
    <string name="icon_sort_down">&#106;</string>
    <string name="icon_sort_up">&#107;</string>
    <string name="icon_arrow_left">&#xe314;</string>
    <string name="icon_arrow_right">&#xe315;</string>
    <string name="icon_user">&#xf2c0;</string>
    <string name="icon_user_login">&#xe618;</string>
    <string name="icon_pass_login">&#xe619;</string>
    <string name="icon_forget_login">&#xe612;</string>
    <string name="icon_check">&#xe5ca;</string>
    <string name="icon_pen">&#xe91a;</string>
    <string name="icon_mic">&#xe91b;</string>
    <string name="icon_arro_right">&#xea42;</string>
    <string name="icon_arro_left">&#xea44;</string>
    <string name="searchFlight">Flight</string>
    <string name="search_package">Holiday Package</string>
    <string name="search_hotel">Hotel Reservation</string>
    <string name="reserve_package">Book</string>
    <string name="icon_calander">&#xe908;</string>
    <string name="search_back_right">&#xea40;</string>
    <string name="icon_plane">&#xe622;</string>
    <string name="arrow_left">&#xea40;</string>
    <string name="icon_exp_up">&#xe801;</string>
    <string name="icon_exp_down">&#xe800;</string>
    <string name="_arrow_right">&#xea3c;</string>
    <string name="btn_insurance">Travel Insurance</string>
    <string name="icon_like">&#xe914;</string>
    <string name="icon_dislike">&#xe915;</string>
    <string name="icon_message">&#xe049;</string>
    <string name="icon_email">&#xe912;</string>
    <string name="mines">&#xe892;</string>
    <string name="plus">&#xe891;</string>
    <string name="aboutus">&#xe609;</string>
    <string name="bigplane">&#xe610;</string>
    <string name="contactus">&#xe611;</string>
    <string name="hotel">&#xe613;</string>
    <string name="insurance">&#xe614;</string>
    <string name="packages">&#xe615;</string>
    <string name="terms">&#xe616;</string>
    <string name="tour">&#xe617;</string>
    <string name="userlogin">&#xe618;</string>
    <string name="icon_arrow_up">&#xe316;</string>
    <string name="icon_arrow_down">&#xe313;</string>
    <string name="contract">&#xe620;</string>
    <string name="contract_num">&#xe623;</string>
    <string name="contract_email">&#xe625;</string>
    <string name="train">&#xe621;</string>
    <string name="ok">&#xe640;</string>
    <string name="cancel">&#xe641;</string>
    <string name="nowifi">&#xe917;</string>
    <string name="transfer">&#xe918;</string>
    <string name="plane">&#xe919;</string>
    <string name="weight">&#xe641;</string>
    <string name="Pieces">&#xe642;</string>
    <string name="dot">&#xf052;</string>
    <string name="empty_circle">&#xe627;</string>
    <string name="setting">&#xe637;</string>
    <string name="icon_mail">&#xe900;</string>
    <string name="icon_survey">&#109;</string>
    <string name="no_results_found">No Results Found</string>
    <string name="back_exit">Please press the Back button once to exit</string>
    <string name="Sort">Sort</string>
    <string name="login">Login</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="CancelAlert">No</string>
    <string name="OkAlert">Yes</string>
    <string name="Update">Update</string>
    <string name="UpdateAlert">The software needs to be upgraded, Do you want to update the software?</string>
    <string name="SortMax">Based on the highest price</string>
    <string name="SortMin">Based on the lowest price</string>
    <string name="name">Name</string>
    <string name="mail">Email</string>
    <string name="email_">Email</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="login_">Login</string>
    <string name="join_user">JOIN USER</string>
    <string name="create_account">CREATE ACCOUNT</string>
</resources>