<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rsignIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.10"
    android:orientation="vertical"
    android:background="@drawable/alert_header_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"

        android:visibility="visible">



        <TextView
            android:id="@+id/txtTitleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_40dp_f"
            android:gravity="center"
            android:text="@string/join_user"
            android:textAppearance="@style/IrsansBold"
            android:textColor="#fff"
            android:textSize="@dimen/_40dp"
            android:textStyle="bold" />


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_80dp_fh_"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_50dp"
            android:layout_weight="0.8"
            android:background="@null"
            android:gravity="right|center"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"

            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_14dp_txtSize" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center|left"

            android:paddingLeft="8dp"
            android:text="@string/icon_user_login"
            android:textAppearance="@style/User_pass_login"
            android:textColor="@color/white"

            android:textSize="@dimen/_25dp_normal_iconSize" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/white" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp_normal_textSize"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_50dp"
            android:layout_weight="0.8"
            android:background="@null"
            android:gravity="right|center"

            android:imeOptions="actionNext"
            android:hint="@string/email_"


            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_14dp_txtSize" />



        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center|left"

            android:paddingLeft="8dp"
            android:text="@string/icon_email"
            android:textAppearance="@style/IconFonts"
            android:textColor="@color/white"

            android:textSize="@dimen/_25dp_normal_iconSize" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp_normal_textSize"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_50dp"
            android:layout_weight="0.8"
            android:background="@null"
            android:gravity="right|center"

            android:imeOptions="actionNext"
            android:hint="@string/password"

            android:inputType="textPassword"

            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_14dp_txtSize" />



        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center|left"

            android:paddingLeft="8dp"
            android:text="@string/icon_pass_login"
            android:textAppearance="@style/User_pass_login"
            android:textColor="@color/white"

            android:textSize="@dimen/_25dp_normal_iconSize" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/white" />




    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/_80dp_fh_"
        android:orientation="horizontal"
        android:background="@drawable/background_strock_purple"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:background="@null"
            android:textSize="@dimen/_14dp_txtSize" />




    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:gravity="right|center"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/white"
            android:textSize="@dimen/_14dp_txtSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/icon_forget_login"
            android:textAppearance="@style/User_pass_login"
            android:textColor="@color/white"
            android:textSize="@dimen/_25dp_normal_iconSize" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBackSI"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="@dimen/_60dp_hight"
        android:orientation="horizontal"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center">



        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"

            android:paddingLeft="8dp"
            android:text="@string/icon_arro_right"
            android:textAppearance="@style/IconFonts"
            android:textColor="@color/white"

            android:textSize="@dimen/_50_flight_dp" />


    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:visibility="gone" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/btngravity_big"
        android:gravity="right"
        android:visibility="gone">



        <mehdi.sakout.fancybuttons.FancyButton

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:elevation="4dp"
            android:gravity="center"
            android:paddingBottom="1dp"
            fancy:fb_defaultColor="@android:color/transparent"
            fancy:fb_focusColor="#96000000"
            fancy:fb_radius="0dp"
            fancy:fb_text="@string/login_"
            fancy:fb_textColor="#FFFFFF"
            fancy:fb_textSize="@dimen/_16dp_normal_textSize" >

        </mehdi.sakout.fancybuttons.FancyButton>


    </RelativeLayout>


</LinearLayout>