<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@color/n_blue_btn"
        android:text="@string/Update"
        android:textColor="@color/white"
        android:textSize="@dimen/_16dp_txtSize"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:textAppearance="@style/IrsansBold"

        />



    <TextView
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:id="@+id/tvAlert"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textAppearance="@style/IrsansBold"
        android:textSize="@dimen/_12dp_normal_textSize"
        android:text="@string/UpdateAlert"
        />






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/_10dp_margin"
        android:layout_marginTop="10dp"
        >
        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnExitLogout"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="@dimen/_40dp"
            android:layout_gravity="center"
            android:elevation="1dp"
            android:paddingBottom="1dp"
            fancy:fb_defaultColor="@color/n_blue_btn"
            fancy:fb_focusColor="@color/focusColor"
            fancy:fb_radius="100dp"
            fancy:fb_text="@string/CancelAlert"
            fancy:fb_textColor="#fff"
            fancy:fb_textSize="@dimen/_14dp_txtSize"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnOkLogout"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="@dimen/_40dp"
            android:layout_gravity="center"
            android:elevation="1dp"
            android:paddingBottom="1dp"
            fancy:fb_defaultColor="@color/n_blue_btn"
            fancy:fb_focusColor="@color/focusColor"
            fancy:fb_radius="100dp"
            fancy:fb_text="@string/OkAlert"
            fancy:fb_textColor="#fff"
            fancy:fb_textSize="@dimen/_14dp_txtSize"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

    </LinearLayout>



</LinearLayout>