<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@drawable/alert_header_background"
        android:text="@string/Sort"
        android:textColor="@color/white"
        android:textSize="@dimen/_16dp_txtSize"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:textAppearance="@style/IrsansBold"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="right">

        <TextView
            android:id="@+id/tvMax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SortMax"
            android:textSize="@dimen/_14dp_txtSize"
            android:textColor="@color/text_color_4d"
            android:textAppearance="@style/IrsansBold"
            android:gravity="center"
            android:padding="@dimen/_10dp_margin"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/textColorR"/>

        <TextView
            android:id="@+id/tvMin"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SortMin"
            android:textSize="@dimen/_14dp_txtSize"
            android:textColor="@color/text_color_4d"
            android:textAppearance="@style/IrsansBold"
            android:gravity="center"
            android:padding="@dimen/_10dp_margin"/>



    </LinearLayout>
</LinearLayout>

