<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/login_page_picture" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/login"
            android:textAppearance="@style/IrsansBold"
            android:textColor="#fff" />

        <include
            android:id="@+id/toolbarLayout"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.42"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:background="@null"
                android:gravity="right|center|bottom"
                android:hint="@string/mail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColor="@color/text_color_2e"
                android:textColorHint="@color/text_color_2e"
                android:textSize="@dimen/_14dp_txtSize" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center|left|bottom"
                android:paddingBottom="13dp"
                android:paddingLeft="8dp"
                android:text="@string/icon_user_login"
                android:textAppearance="@style/User_pass_login"
                android:textColor="@color/text_color_2e"
                android:textSize="@dimen/_25dp_normal_iconSize" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:background="@color/text_color_2e" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:background="@null"
                android:gravity="right|center|bottom"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColor="@color/text_color_2e"
                android:textColorHint="@color/text_color_2e"
                android:textSize="@dimen/_14dp_txtSize" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center|bottom|left"
                android:paddingBottom="13dp"
                android:paddingLeft="8dp"
                android:text="@string/icon_pass_login"
                android:textAppearance="@style/User_pass_login"
                android:textColor="@color/text_color_2e"

                android:textSize="@dimen/_25dp_normal_iconSize" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:background="@color/text_color_2e" />

        <LinearLayout
            android:id="@+id/layout_reset_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="30dp"
            android:layout_weight="0.3"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:gravity="right|center"
                android:text="@string/forgot_password"
                android:textColor="@color/text_color_2e"
                android:textSize="@dimen/_14dp_txtSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/icon_forget_login"
                android:textAppearance="@style/User_pass_login"
                android:textColor="@color/text_color_2e"
                android:textSize="@dimen/_25dp_normal_iconSize" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="45dp"
            android:layout_weight="0.3"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/text_color_2e"
                android:textSize="@dimen/_14dp_txtSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/icon_forget_login"
                android:textAppearance="@style/User_pass_login"
                android:textColor="@color/text_color_2e"
                android:textSize="@dimen/_25dp_normal_iconSize" />

        </LinearLayout>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:background="@drawable/btngravity_big"
        android:gravity="right">

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:elevation="4dp"
            android:gravity="center"
            android:paddingBottom="1dp"
            fancy:fb_defaultColor="@android:color/transparent"
            fancy:fb_focusColor="#96000000"
            fancy:fb_radius="0dp"
            fancy:fb_text="@string/login_"
            fancy:fb_textColor="#FFFFFF"
            fancy:fb_textSize="@dimen/_16dp_normal_textSize" />


    </RelativeLayout>


</LinearLayout>